# bbbPythoN

./: README.md  pyproject.toml
bbbPackage/: bbbPredict.py
bbbPackage/mah_dist_info/: train_act_mah-dist_info_2D+3D_ma
bbbPackage/model/: bbbRf.sav
bbbPythoN/: bbbPythoN.py
bbbPythoN/bin_bounds/: bin_bounds_bal.csv  bin_bounds_imba.csv
bbbPythoN/data/: B3DB_BalTrainTestData.csv  FeatSel_Data.csv  Inhouse_ImbaTrainTestData.csv  Li_Tong_Wang_ExtVal.csv
bbbPythoN/mah_dist_info/: train_act_mah-dist_info_2D+3D_ma_bal  train_mah-dist_info_2D+3D_ma  train_mah-dist_info_2D+3D_ma_bal
src/bbbPackage/: bbbPackage.py
src/bbbPackage/bin_bounds/: bin_bounds.csv
src/bbbPackage/desc_names/: mi-dse_descs.csv  na_descs_csv
