[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_bbb"
version = "0.0.1"
authors = [
  { name="Frederic Dehnbostel", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9.15"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "joblib>=1.2.0",
  "numpy>=1.23.5",
  "pandas>=1.5.2",
  "openpyxl>=3.1.1",
  "rdkit>=2022.09.1",
  "mordred>=1.2.0"
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""