[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bbbPackage"
version = "1.0"
authors = [
  { name="Frederic Dehnbostel", email="fredericdehnbostel@example.com" },
]
description = "Package to produce Blood-Brain barrier MI-DSE fingerprints for compounds supplied as SMILES string,
			   .sdf, or .csv file and predict their Blood-Brain barrier permeability. Predictions are made by the 
			   best performing model of 'PAPER NAME'."
readme = "README.md"
requires-python = ">=3.9.15"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "joblib>=1.2.0",
  "numpy>=1.23.5",
  "pandas>=1.5.2",
  "openpyxl>=3.1.1",
  "rdkit>=2022.09.1",
  "mordred>=1.2.0"
]

#[project.urls]
#"Homepage" = ""
#"Bug Tracker" = ""