[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bbbPythoN"
version = "1.0"
authors = [
  { name="Frederic Dehnbostel", email="priyanka.banerjee@charite.de" },
]
description = "Package to produce Blood-Brain barrier MI-DSE fingerprints for compounds supplied as SMILES string,.sdf, or .csv file and predict their Blood-Brain barrier permeability. Predictions are made by the best performing model of 'Non-Animal Models for Blood-Brain Barrier Permeability Evaluation of Drug-Like Compounds'."
readme = "README.md"
requires-python = ">=3.9.15"
repository = ""
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "joblib>=1.2.0",
  "numpy>=1.23.5",
  "pandas>=1.5.2",
  "openpyxl>=3.1.1",
  "rdkit>=2022.09.1",
  "mordred>=1.2.0"
]
[metadata]
license = "CC-BY-NC-ND-4.0"
